--- a/src/App.css
+++ b/src/App.css
@@ -139,6 +139,7 @@ h4{
   justify-content: space-between;
   align-items: center;
   text-align: center;
+  box-sizing: border-box;
 }
 
 .card-suplente {
@@ -148,10 +149,12 @@ h4{
   align-items: center;
   justify-content: space-around;
   width: 100%;
+  box-sizing: border-box;
 }
 
 .suplente-image {
-  width: 30%;
+  /* width: 30%; */
+  height: 10vh;
   border-radius: 30px;
 }
 
@@ -194,6 +197,14 @@ h4{
 @media (max-width: 740px) {
   h1 {
     font-size: 2rem;
+  }
+
+  h2 {
+    font-size: 1rem;
+  }
+
+  h3{
+    font-size: .7rem;
   }
 
   .card {
