Added landscape view

--- a/src/App.css
+++ b/src/App.css
@@ -165,7 +165,7 @@ h4{
   border-radius: 20px;
 }
 
-@media (max-width: 1000px) {
+@media only screen and (max-width: 1000px) {
   .AllIntegrantesCardDiv {
     width: 90%;
     display: flex;
@@ -180,7 +180,7 @@ h4{
   }
 }
 
-@media (max-width: 740px) {
+@media only screen and (max-width: 740px) {
   h1 {
     font-size: 2rem;
   }
@@ -193,9 +193,9 @@ h4{
     font-size: .9rem;
   }
 
-  .card {
+  /* .card {
     height: 50vh;
-  }
+  } */
 
   .card > img {
     height: 100%;
@@ -205,5 +205,24 @@ h4{
 
   #planilla p {
     font-size: 1.5rem;
+  }
+}
+
+@media (max-width: 740px) and (orientation: landscape) {
+  .card {
+    height: 70vh;
+    width: 90vw;
+  }
+}
+
+@media (min-width: 741px) and (orientation: landscape) {
+  .card {
+    height: 70vh;
+    width: 90vw;
+  }
+
+  .suplente-image {
+    height: 25vh;
+    border-radius: 10px;
   }
 }
