--- a/src/App.css
+++ b/src/App.css
@@ -203,6 +203,10 @@ h4{
     border-radius: 20px;
   }
 
+  .suplente-image {
+    height: 15vh;
+  }
+
   #planilla p {
     font-size: 1.5rem;
   }
@@ -215,14 +219,20 @@ h4{
   }
 }
 
-@media (min-width: 741px) and (orientation: landscape) {
+@media (min-width: 742px) and (max-width: 999px) and (orientation: landscape) {
+  
   .card {
-    height: 70vh;
-    width: 90vw;
+    height: 50vh;
+    width: 80vw;
   }
 
   .suplente-image {
     height: 25vh;
     border-radius: 10px;
+  }
+}
+@media only screen and (max-width: 500px){
+  .suplente-image {
+    height: 9vh;
   }
 }
